objects/LongLeadItems__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of Long Lead Time Item</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ItemResolutionDate__c</fullName>
        <inlineHelpText>Date Item will be resolved</inlineHelpText>
        <label>Item Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB7Submittal__c</fullName>
        <label>PB7 Submittal</label>
        <referenceTo>Contract_Committee_Submittal__c</referenceTo>
        <relationshipLabel>Long Lead Items</relationshipLabel>
        <relationshipName>Long_Lead_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Long Lead Item</label>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Long Lead Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Long Lead Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>